@@ -1,0 +1,11 @@
+package ec.cjpq.go4demo1.structuralPatterns.Decorator;
+
+/**
+ * Gang of Four Design Patterns Demo 1
+ * Shape interface 
+ * @author carper, carlosjulioperez@gmail.com
+ * 2016-12-11
+ */
+public interface Shape{
+	void draw();
+}
