@@ -1,0 +1,38 @@
+package ec.cjpq.go4demo1.structuralPatterns.Flyweight;
+
+/**
+ * Gang of Four Design Patterns Demo 1
+ * Concrete class implementing the Shape interface
+ * @author carper, carlosjulioperez@gmail.com
+ * 2016-12-11
+ */
+public class Circle implements Shape{
+
+	private String color;
+
+	private int x;
+	private int y;
+	private int radius;
+
+	public Circle(String color){
+		this.color = color;
+	}
+
+	public void setX(int x){
+		this.x = x;
+	}
+
+	public void setY(int y){
+		this.y = y;
+	}
+
+	public void setRadius(int radius){
+		this.radius = radius;
+	}
+
+	@Override
+	public void draw(){
+		System.out.println("Circle: Draw() [Color: " + color + ", x: " + x + ", y: " + y + ", radius: " + radius );
+	}
+
+}
