@@ -1,0 +1,12 @@
+package ec.cjpq.go4demo1.structuralPatterns.Flyweight;
+
+/**
+ * Gang of Four Design Patterns Demo 1
+ * Shape interface 
+ * @author carper, carlosjulioperez@gmail.com
+ * 2016-12-11
+ */
+public interface Shape{
+	void draw();
+}
+
