@@ -1,0 +1,11 @@
+package ec.cjpq.go4demo1.structuralPatterns.Proxy;
+
+/**
+ * Gang of Four Design Patterns Demo 1
+ * Image interface
+ * @author carper, carlosjulioperez@gmail.com
+ * 2016-12-13
+ */
+public interface Image{
+	void display();
+}
